include/dss_capi.h

    /*
    Array of strings with all Transformer names in the active circuit.
    */
    DSS_CAPI_DLL void Transformers_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Transformers_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Transformers_Get_AllNames_GR(void);
    /*
    Sets the first Transformer active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Transformers_Get_First(void);
    /*
    Active Winding delta or wye connection?
    */
    DSS_CAPI_DLL uint16_t Transformers_Get_IsDelta(void);
    /*
    Active Winding kV rating.  Phase-phase for 2 or 3 phases, actual winding kV for 1 phase transformer.
    */
    DSS_CAPI_DLL double Transformers_Get_kV(void);
    /*
    Active Winding kVA rating. On winding 1, this also determines normal and emergency current ratings for all windings.
    */
    DSS_CAPI_DLL double Transformers_Get_kVA(void);
    /*
    Active Winding maximum tap in per-unit.
    */
    DSS_CAPI_DLL double Transformers_Get_MaxTap(void);
    /*
    Active Winding minimum tap in per-unit.
    */
    DSS_CAPI_DLL double Transformers_Get_MinTap(void);
    /*
    Sets a Transformer active by Name.
    */
    DSS_CAPI_DLL char* Transformers_Get_Name(void);
    /*
    Sets the next Transformer active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Transformers_Get_Next(void);
    /*
    Active Winding number of tap steps betwein MinTap and MaxTap.
    */
    DSS_CAPI_DLL int32_t Transformers_Get_NumTaps(void);
    /*
    Number of windings on this transformer. Allocates memory; set or change this property first.
    */
    DSS_CAPI_DLL int32_t Transformers_Get_NumWindings(void);
    /*
    Active Winding resistance in %
    */
    DSS_CAPI_DLL double Transformers_Get_R(void);
    /*
    Active Winding neutral resistance [ohms] for wye connections. Set less than zero for ungrounded wye.
    */
    DSS_CAPI_DLL double Transformers_Get_Rneut(void);
    /*
    Active Winding tap in per-unit.
    */
    DSS_CAPI_DLL double Transformers_Get_Tap(void);
    /*
    Active Winding Number from 1..NumWindings. Update this before reading or setting a sequence of winding properties (R, Tap, kV, kVA, etc.)
    */
    DSS_CAPI_DLL int32_t Transformers_Get_Wdg(void);
    /*
    Name of an XfrmCode that supplies electircal parameters for this Transformer.
    */
    DSS_CAPI_DLL char* Transformers_Get_XfmrCode(void);
    /*
    Percent reactance between windings 1 and 2, on winding 1 kVA base. Use for 2-winding or 3-winding transformers.
    */
    DSS_CAPI_DLL double Transformers_Get_Xhl(void);
    /*
    Percent reactance between windigns 1 and 3, on winding 1 kVA base.  Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL double Transformers_Get_Xht(void);
    /*
    Percent reactance between windings 2 and 3, on winding 1 kVA base. Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL double Transformers_Get_Xlt(void);
    /*
    Active Winding neutral reactance [ohms] for wye connections.
    */
    DSS_CAPI_DLL double Transformers_Get_Xneut(void);
    /*
    Active Winding delta or wye connection?
    */
    DSS_CAPI_DLL void Transformers_Set_IsDelta(uint16_t Value);
    /*
    Active Winding kV rating.  Phase-phase for 2 or 3 phases, actual winding kV for 1 phase transformer.
    */
    DSS_CAPI_DLL void Transformers_Set_kV(double Value);
    /*
    Active Winding kVA rating. On winding 1, this also determines normal and emergency current ratings for all windings.
    */
    DSS_CAPI_DLL void Transformers_Set_kVA(double Value);
    /*
    Active Winding maximum tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_MaxTap(double Value);
    /*
    Active Winding minimum tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_MinTap(double Value);
    /*
    Sets a Transformer active by Name.
    */
    DSS_CAPI_DLL void Transformers_Set_Name(char* Value);
    /*
    Active Winding number of tap steps betwein MinTap and MaxTap.
    */
    DSS_CAPI_DLL void Transformers_Set_NumTaps(int32_t Value);
    /*
    Number of windings on this transformer. Allocates memory; set or change this property first.
    */
    DSS_CAPI_DLL void Transformers_Set_NumWindings(int32_t Value);
    /*
    Active Winding resistance in %
    */
    DSS_CAPI_DLL void Transformers_Set_R(double Value);
    /*
    Active Winding neutral resistance [ohms] for wye connections. Set less than zero for ungrounded wye.
    */
    DSS_CAPI_DLL void Transformers_Set_Rneut(double Value);
    /*
    Active Winding tap in per-unit.
    */
    DSS_CAPI_DLL void Transformers_Set_Tap(double Value);
    /*
    Active Winding Number from 1..NumWindings. Update this before reading or setting a sequence of winding properties (R, Tap, kV, kVA, etc.)
    */
    DSS_CAPI_DLL void Transformers_Set_Wdg(int32_t Value);
    /*
    Name of an XfrmCode that supplies electircal parameters for this Transformer.
    */
    DSS_CAPI_DLL void Transformers_Set_XfmrCode(char* Value);
    /*
    Percent reactance between windings 1 and 2, on winding 1 kVA base. Use for 2-winding or 3-winding transformers.
    */
    DSS_CAPI_DLL void Transformers_Set_Xhl(double Value);
    /*
    Percent reactance between windigns 1 and 3, on winding 1 kVA base.  Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL void Transformers_Set_Xht(double Value);
    /*
    Percent reactance between windings 2 and 3, on winding 1 kVA base. Use for 3-winding transformers only.
    */
    DSS_CAPI_DLL void Transformers_Set_Xlt(double Value);
    /*
    Active Winding neutral reactance [ohms] for wye connections.
    */
    DSS_CAPI_DLL void Transformers_Set_Xneut(double Value);
    DSS_CAPI_DLL int32_t Transformers_Get_Count(void);
    /*
    Complex array of voltages for active winding
    */
    DSS_CAPI_DLL void Transformers_Get_WdgVoltages(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Transformers_Get_WdgVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Transformers_Get_WdgVoltages_GR(void);
    /*
    All Winding currents (ph1, wdg1, wdg2,... ph2, wdg1, wdg2 ...)
    */
    DSS_CAPI_DLL void Transformers_Get_WdgCurrents(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Transformers_Get_WdgCurrents but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Transformers_Get_WdgCurrents_GR(void);
    /*
    All winding currents in CSV string form like the WdgCurrents property
    */
    DSS_CAPI_DLL char* Transformers_Get_strWdgCurrents(void);
    /*
    Transformer Core Type: 0=shell;1 = 1-phase; 3= 3-leg; 5= 5-leg
    */
    DSS_CAPI_DLL int32_t Transformers_Get_CoreType(void);
    DSS_CAPI_DLL void Transformers_Set_CoreType(int32_t Value);
    /*
    dc Resistance of active winding in ohms for GIC analysis
    */
    DSS_CAPI_DLL double Transformers_Get_RdcOhms(void);
    DSS_CAPI_DLL void Transformers_Set_RdcOhms(double Value);
    /*
    Returns a complex array of the 3 types of losses (total losses, load losses, no-load losses) for the active transformer, in VA
    */
    DSS_CAPI_DLL void Transformers_Get_LossesByType(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Transformers_Get_LossesByType but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Transformers_Get_LossesByType_GR(void);
    /*
    Returns a complex array of the 3 types of losses (total losses, load losses, no-load losses) concatenated for the all transformers, in VA
    */
    DSS_CAPI_DLL void Transformers_Get_AllLossesByType(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Transformers_Get_AllLossesByType but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Transformers_Get_AllLossesByType_GR(void);
    DSS_CAPI_DLL int32_t Transformers_Get_idx(void);
    DSS_CAPI_DLL void Transformers_Set_idx(int32_t Value);